# template-cpp

./: .gitignore  CMakeLists.txt  armv8profile  conanfile.py  pokyprofile
share-lib/: CMakeLists.txt  arithmetic.cc
share-lib/include/shared/: arithmetic.h
src/: app.cc
static-lib/: arithmetic.cc
static-lib/include/statical/: arithmetic.h
statical-lib/: CMakeLists.txt  arithmetic.cc
