CMAKE_MINIMUM_REQUIRED(VERSION 3.16.1)
PROJECT(app)

#ADD_SUBDIRECTORY(share-lib)
#ADD_SUBDIRECTORY(statical-lib)
# ADD_SUBDIRECTORY(src)

ADD_EXECUTABLE(${PROJECT_NAME} src/app.cc)
#TARGET_LINK_LIBRARIES(${PROJECT_NAME} statical-lib-arithmetic)
#TARGET_LINK_LIBRARIES(${PROJECT_NAME} shared-lib-arithmetic)

#install(TARGETS app DESTINATION bin)

