CMAKE_MINIMUM_REQUIRED(VERSION 3.16.1)
PROJECT(app)

#ADD_SUBDIRECTORY(share-lib)
#ADD_SUBDIRECTORY(statical-lib)
# ADD_SUBDIRECTORY(src)

#set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -s")
#set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -s")

ADD_EXECUTABLE(${PROJECT_NAME} src/app.cc)
#TARGET_LINK_LIBRARIES(${PROJECT_NAME} statical-lib-arithmetic)
#TARGET_LINK_LIBRARIES(${PROJECT_NAME} shared-lib-arithmetic)

install(TARGETS app DESTINATION bin)

